Changed "main", "FlightFilter" classes